cmake_minimum_required(VERSION 3.17)
project(Data-structure-C)

set(CMAKE_CXX_STANDARD 14)

# add_executable(Data-structure-C 01-arraylist/ArrayList.h 01-arraylist/ArrayList.c 01-arraylist/main.c)
add_executable(Data-structure-C 02-linklist/SingleLinkList.h 02-linklist/SingleLinkList.c 02-linklist/Smain.c)




# add_executable(Data-structure-C 02-linklist/DoubleLinkList.h 02-linklist/DoubleLinkList.c 02-linklist/Dmain.c)

# add_executable(Data-structure-C 00-other/CLinkList.c)