cmake_minimum_required(VERSION 3.17)
project(Data-structure-C)

set(CMAKE_CXX_STANDARD 14)

# add_executable(Data-structure-C 01-arraylist/ArrayList.h 01-arraylist/ArrayList.c)
# add_executable(Data-structure-C 02-linklist/SingleLinkList.h 02-linklist/SingleLinkList.c)
# add_executable(Data-structure-C 02-linklist/CircleLinkList.c 02-linklist/CircleLinkList.h)
# add_executable(Data-structure-C 03-stack/Stack_Array.h 03-stack/Stack_Array.c)
# add_executable(Data-structure-C 03-stack/Stack_Link.h 03-stack/Stack_Link.c)

# no_finish(2.1.c/)
add_executable(Data-structure-C 98-experiment/migong.c)



